fix: исправлена сетка и убран костыль с overflow:hidden, теперь нету проблемы с горизонтальным скроллом

--- a/styles/style.css
+++ b/styles/style.css
@@ -96,6 +96,8 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 16px;
+   flex: 1;
+  min-width: 0;
 }
 
 .result__video-container {
@@ -169,6 +171,8 @@ ol {
   flex-direction: column;
   align-self: flex-start;
   gap: 16px;
+  flex: 0 0 399px;
+  min-width: 0;
 }
 
 .title {
@@ -186,7 +190,6 @@ ol {
 .content__list-container {
   height: 298px;
   overflow-y: auto;
-  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -197,7 +200,6 @@ ol {
   display: flex;
   flex-direction: column;
   gap: 30px;
-  min-width: 399px;
 }
 
 .more-button {
@@ -217,7 +219,6 @@ ol {
   display: flex;
   align-items: flex-start;
   min-width: 0;
-  max-width: 399px;
 }
 
 .content__video-card-title {
